# teslatte

./: .gitignore  API.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
.github/workflows/: rust.yml
examples/: basic.rs  cli.rs  cli_vehicle.rs
scrape_fleet_api/: Cargo.toml  fleet.html
scrape_fleet_api/src/: main.rs
src/: auth.rs  calendar_history.rs  cli.rs  energy.rs  energy_sites.rs  error.rs  lib.rs  main.rs  powerwall.rs  products.rs  vehicle_state.rs  vehicles.rs
src/cli/: calendar_history.rs  energy.rs  powerwall.rs  vehicle.rs
tesla_api_coverage/: Cargo.toml  README.md
tesla_api_coverage/cached/: fleet.html
tesla_api_coverage/src/: api_md.rs  fleet.rs  main.rs  nom_help.rs  teslatte.rs  timdorr.rs  vehicle_command.rs
testdata/: energy_sites_gak_2023_11_06.json  energy_sites_live_status_gak_plugged_in_2023_11_06.json  energy_sites_live_status_gak_unplugged_2023_11_06.json  products_gak_2024_01_20.json  products_gak_2024_04_12.json  products_ulr_2024_08_14.json  vehicle_data_BitcoinLightning_2023_10_09.json  vehicle_data_HTLC_2023_09_19.json  vehicle_data_HTLC_2023_10_09.json  vehicle_data_HTLC_2023_10_18.json  vehicle_data_HTLC_2023_10_19.json  vehicle_data_gak_2023_11_11.json
