[package]
name = "teslatte"
version = "0.1.0"
description = "A Rust crate and CLI for querying the Tesla API."
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["cli", "cli-pretty-json", "fancy-errors"]

fancy-errors = ["miette/fancy"]
cli = ["dep:clap", "dep:tracing-subscriber"]
cli-pretty-json = ["dep:colored_json"]

[[bin]]
name = "teslatte"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
reqwest = { version = "0.11.18", features = ["rustls-tls", "cookies", "json"] }
url = "2.4.0"
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
rustls = "0.21.5"
rand = "0.8.5"
chrono = { version = "0.4.26", features = ["serde"] }
strum = { version = "0.25.0", features = ["derive"] }
urlencoding = "2.1.3"
derive_more = "0.99.17"
pkce = "0.2.0"

clap = { version = "4.3.19", features = ["derive", "env"], optional = true }
tracing-subscriber = { version = "0.3.17", optional = true }
colored_json = { version = "3.2.0", optional = true }

[dev-dependencies]
test-log = { version = "0.2.12", default-features = false, features = ["trace"] }
