[package]
name = "teslatte"
version = "0.1.9"
description = "A command line tool and Rust crate for querying the Tesla API."
edition = "2021"
rust-version = "1.75.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gak/teslatte"

[features]
default = ["cli", "cli-pretty-json", "fancy-errors"]

fancy-errors = ["miette/fancy"]
cli = ["dep:clap", "dep:tracing-subscriber"]
cli-pretty-json = ["dep:colored_json"]

[[bin]]
name = "teslatte"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
reqwest = { version = "0.11.22", features = ["rustls-tls", "cookies", "json"] }
url = "2.4.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
rustls = "0.21.7"
rand = "0.8.5"
chrono = { version = "0.4.31", features = ["serde"] }
strum = { version = "0.25.0", features = ["derive"] }
urlencoding = "2.1.3"
derive_more = "0.99.17"
pkce = "0.2.0"

clap = { version = "4.4.6", features = ["derive", "env"], optional = true }
tracing-subscriber = { version = "0.3.17", optional = true }
colored_json = { version = "4.0.0", optional = true }

[dev-dependencies]
test-log = { version = "0.2.13", default-features = false, features = ["trace"] }
