[package]
name = "teslatte"
version = "0.1.13"
description = "A command line tool and Rust crate for querying the Tesla API."
edition = "2021"
rust-version = "1.75.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gak/teslatte"

[features]
default = ["cli", "cli-pretty-json", "fancy-errors"]

fancy-errors = ["miette/fancy"]
cli = ["dep:clap", "dep:tracing-subscriber"]
cli-pretty-json = ["dep:colored_json"]

[[bin]]
name = "teslatte"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
reqwest = { version = "0.11.23", features = ["rustls-tls", "cookies", "json"] }
url = "2.5.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
rustls = "0.23.0"
rand = "0.8.5"
chrono = { version = "0.4.31", features = ["serde"] }
strum = { version = "0.26.1", features = ["derive"] }
urlencoding = "2.1.3"
derive_more = "0.99.17"
pkce = "0.2.0"

clap = { version = "4.4.18", features = ["derive", "env"], optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }
colored_json = { version = "4.1.0", optional = true }

[dev-dependencies]
test-log = { version = "0.2.14", default-features = false, features = ["trace"] }
