[package]
name = "scrape_fleet_api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11.22"
tokio = { version = "1.33.0", features = ["full"] }
clap = { version = "4.4.6", features = ["derive"] }
tracing-subscriber = "0.3.17"
scraper = "0.17.1"
strum = { version = "0.25.0", features = ["derive"] }