[package]
name = "tesla_api_coverage"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11.22"
tokio = { version = "1.33.0", features = ["full"] }
clap = { version = "4.4.6", features = ["derive"] }
scraper = "0.17.1"
strum = { version = "0.25.0", features = ["derive"] }
tracing-subscriber = "0.3.17"
tracing = "0.1.40"
log = "0.4.20"
nom = "7.1.3"
anyhow = "1.0.75"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
heck = "0.5.0-rc.1"
glob = "0.3.1"
syn = { version = "2.0.38" , features = ["full", "extra-traits"] }