[package]
name = "tesla_api_coverage"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11.23"
tokio = { version = "1.35.1", features = ["full"] }
clap = { version = "4.4.18", features = ["derive"] }
scraper = "0.18.1"
strum = { version = "0.25.0", features = ["derive"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
log = "0.4.20"
nom = "7.1.3"
anyhow = "1.0.79"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
heck = "0.5.0-rc.1"
glob = "0.3.1"
syn = { version = "2.0.48" , features = ["full", "extra-traits"] }
